# qaydex-server

./: .env  .gitignore  .pre-commit-config.yaml  .pre-commit.config.yaml  db.sqlite3  pyproject.toml
backend/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
base/: app.py  choices.py  models.py  permissions.py  serializers.py
base/migrations/: 0001_initial.py
schools/: models.py  serializers.py  urls.py  views.py
schools/migrations/: 0001_initial.py
users/: __init__.py  admin.py  apps.py  choices.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
